# reactvision-viro-beta

./: CHANGELOG.md  NEW_ARCHITECTURE.md  NEW_ARCHITECTURE_IMPLEMENTATION.md  README.md  dynamic-index.ts  package-lock.json  package.json
examples/: AutoDetectionExample.tsx  NEW_ARCHITECTURE_SAMPLES.md  README.md  SampleAndroidBuildGradle  SampleAndroidSettingsGradle  SamplePodfile
fabric-interop/: NativeViro.ts  README.md  ViroFabricContainer.tsx  index.ts  package.json  tsconfig.json
fabric-interop/android/: README.md  build.gradle  proguard-rules.pro  settings.gradle
fabric-interop/android/src/main/: AndroidManifest.xml
fabric-interop/android/src/main/cpp/: CMakeLists.txt  ViroFabricContainerJSI.cpp
fabric-interop/android/src/main/java/com/viromedia/bridge/fabric/: ViroFabricContainer.java  ViroFabricContainerManager.java  ViroFabricContainerViewManager.java  ViroFabricPackage.java
fabric-interop/android/src/main/java/com/viromedia/bridge/fabric/specs/: ViroFabricContainerViewSpec.java
fabric-interop/android/src/main/js/specs/: ViroFabricContainerViewNativeComponent.js  ViroFabricContainerViewNativeComponent.ts
fabric-interop/components/: Viro360Image.tsx  Viro360Video.tsx  Viro3DObject.tsx  ViroARCamera.tsx  ViroARImageMarker.tsx  ViroARObjectMarker.tsx  ViroARPlane.tsx  ViroARScene.tsx  ViroARSceneNavigator.tsx  ViroAmbientLight.tsx  ViroAnimatedComponent.tsx  ViroAnimatedImage.tsx  ViroBox.tsx  ViroButton.tsx  ViroCamera.tsx  ViroController.tsx  ViroDirectionalLight.tsx  ViroFlexView.tsx  ViroGeometry.tsx  ViroGlobal.ts  ViroImage.tsx  ViroLightingEnvironment.tsx  ViroMaterialVideo.tsx  ViroNode.tsx  ViroOmniLight.tsx  ViroOrbitCamera.tsx  ViroParticleEmitter.tsx  ViroPolygon.tsx  ViroPolyline.tsx  ViroPortal.tsx  ViroPortalScene.tsx  ViroQuad.tsx  ViroScene.tsx  ViroSceneNavigator.tsx  ViroSkyBox.tsx  ViroSound.tsx  ViroSoundField.tsx  ViroSpatialSound.tsx  ViroSphere.tsx  ViroSpinner.tsx  (+7 more)
fabric-interop/components/AR/: ViroARTrackingTargets.ts
fabric-interop/components/Animation/: ViroAnimations.ts
fabric-interop/components/Material/: ViroMaterials.ts
fabric-interop/examples/: SimpleARExample.tsx
fabric-interop/ios/: ViroFabric.podspec  ViroFabricContainer.h  ViroFabricContainer.mm  ViroFabricContainerComponentView.mm  ViroFabricContainerManager.h  ViroFabricContainerManager.mm  ViroFabricContainerViewRegister.mm  ViroFabricManager.h  ViroFabricManager.mm
fabric-interop/ios/ViroFabricContainerViewComponentDescriptor/: ViroFabricContainerViewComponentDescriptor.mm
ios/: ViroReact.podspec
plugins/: withViroAndroid.ts  withViroIos.ts
